--- a/platforms/browser/www/settings.html
+++ b/platforms/browser/www/settings.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Settings - ThisPlace</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/master.css">
-  <link rel="stylesheet" type="text/css" href="lib/bootstrap-switch/bootstrap-switch.min.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-XYCjB+hFAjSbgf9yKUgbysEjaVLOXhCgATTEBpCqT1R3jvG5LGRAK5ZIyRbH5vpX" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/geoinfo.js"></script>
-  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+    <title>Settings - ThisPlace</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- Local CSS -->
+    <link rel="stylesheet" type="text/css" href="css/master.css">
+	
+	<!-- Bootswatch CSS -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-XYCjB+hFAjSbgf9yKUgbysEjaVLOXhCgATTEBpCqT1R3jvG5LGRAK5ZIyRbH5vpX" crossorigin="anonymous">
+	
+	<!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	
+	<!-- Bootstrap JS -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	
+	<!-- Local JS -->
+    <script type="text/javascript" src="js/geoinfo.js"></script>
+	
+	<!-- Bootstrap Toggle CSS -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+	
+	<!-- Bootstrap Toggle JS -->
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </head>
+
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Settings</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Nearby</a></li>
-        <li><a href="search.html">Search Location</a></li>
-        <li class="active"><a href="#">Settings</a></li>
-		<li><a href="about.html">About</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+                <a class="navbar-brand" href="#">Settings</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Nearby</a></li>
+                    <li><a href="search.html">Search Location</a></li>
+                    <li class="active"><a href="#">Settings</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<div class="container-fluid">
+    <div class="container-fluid">
 
-<div class="panel panel-default">
-  <div class="panel-heading">Interface Settings</div>
-  <div class="panel-body">
-  
-  <!-- Kilometers or miles -->
-  <p>Distance units</p>
-  <p><input id="settings-id-distanceUnit" type="checkbox" data-toggle="toggle" data-on="Miles" data-off="Kilometers" onChange='toggleCheckbox("distanceUnit");'></p>
-  </div>
-</div>
-</div>
-<script>
-$( document ).ready(function() {
-		initializePage();
-		testSettings();
-		if (localStorage.getItem("settings-distanceUnit") == "km"){
-			$('#settings-id-distanceUnit').prop("checked",false).change();
-		} else {
-			$('#settings-id-distanceUnit').prop("checked",true).change();
-		}
-	});
-</script>
+        <div class="panel panel-default">
+            <div class="panel-heading">Interface Settings</div>
+            <div class="panel-body">
+
+                <!-- Kilometers or miles -->
+                <p>Distance units</p>
+                <p><input id="settings-id-distanceUnit" type="checkbox" data-toggle="toggle" data-on="Miles" data-off="Kilometers" onChange='toggleCheckbox("distanceUnit");'></p>
+            </div>
+        </div>
+    </div>
+    <script>
+        $(document).ready(function() {
+            initializePage();
+            testSettings();
+            if (localStorage.getItem("settings-distanceUnit") == "km") {
+                $('#settings-id-distanceUnit').prop("checked", false).change();
+            } else {
+                $('#settings-id-distanceUnit').prop("checked", true).change();
+            }
+        });
+    </script>
 </body>
+
 </html>
